# agin-class-manager

./: .gitignore  Caddyfile  README.md  compose-dev.yaml  compose.yaml  config-template.toml  config.toml
api/: .dockerignore  Cargo.toml  Dockerfile
api/src/: axum_error.rs  database.rs  init.rs  main.rs  settings.rs  state.rs  utils.rs  validators.rs
api/src/middlewares/: mod.rs  require_auth.rs  require_class_permissions.rs  require_org_permissions.rs
api/src/models/: fundraising.rs  mod.rs  org_members.rs  organization.rs  payers.rs  santa.rs  santa_participants.rs  token.rs  user.rs
api/src/routes/api/: health.rs  logout.rs  mod.rs  user.rs
api/src/routes/api/login/: callback.rs  mod.rs
api/src/routes/api/organizations/: create.rs  mod.rs
api/src/routes/api/organizations/org_id/: mod.rs
api/src/routes/api/organizations/org_id/fundraising/: create.rs  mod.rs
api/src/routes/api/organizations/org_id/members/: add.rs  mod.rs
api/src/routes/api/organizations/org_id/santa/: mod.rs
api/src/store/: fundraising.rs  mod.rs  organization.rs  santa.rs  santa_participant.rs
web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/(main)/: layout.tsx
web/components/: app-sidebar.tsx  button-tile.tsx  chart-area-interactive.tsx  checkbox-tile.tsx  data-table.tsx  date-picker.tsx  input-wrapper.tsx  login-form.tsx  logo.tsx  nav-main.tsx  nav-org.tsx  nav-secondary.tsx  nav-user.tsx  santa-table.tsx  section-cards.tsx  site-header.tsx
web/components/dialogs/: AddMember.tsx  Base.tsx  ChangeAmount.tsx  Confirm.tsx  CreateFundraising.tsx  CreateOrg.tsx  CreateSanta.tsx
web/lib/: config.ts  logo.tsx
web/lib/atoms/: bind.ts  (+2 more)
web/types/: api.d.ts
(+22 files in other folders)
